<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.wlm.wanandroid2.viewmodel.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login_toolbar"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:hint="@string/str_username"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/str_password"
                android:layout_marginTop="@dimen/dp10"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:layout_height="@dimen/dp40" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginStart="@dimen/dp40"
                android:layout_marginEnd="@dimen/dp40"
                android:layout_marginTop="@dimen/dp30"
                android:background="@drawable/shape_login_button"
                android:text="@string/str_login"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginStart="@dimen/dp40"
                android:layout_marginEnd="@dimen/dp40"
                android:layout_marginTop="@dimen/dp30"
                android:background="@drawable/shape_login_button"
                android:text="@string/str_register"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp10"
                android:paddingStart="@dimen/dp40"
                android:paddingEnd="@dimen/dp20"
                android:textSize="@dimen/sp12"
                android:textColor="@color/color_top" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="@dimen/dp70"
            android:layout_height="@dimen/dp70"
            android:visibility="gone"
            android:progress="100"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</layout>