<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="SquareViewModel"
            type="com.wlm.wanandroid2.viewmodel.SquareViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/square_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/str_square"
            app:titleTextColor="@color/white" />

        <com.classic.common.MultipleStatusView
            android:layout_below="@id/square_toolbar"
            android:layout_width="match_parent"
            android:id="@+id/multiple_status_view"
            android:layout_height="match_parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/layout_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbars="vertical"/>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </com.classic.common.MultipleStatusView>

        <LinearLayout
            android:layout_below="@id/square_toolbar"
            android:id="@+id/layout_share"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:hint="@string/str_article_title"
                android:maxLength="100"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20" />

            <EditText
                android:id="@+id/et_link"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:hint="@string/str_article_link"
                android:layout_marginTop="@dimen/dp10"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:layout_height="@dimen/dp40" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dp40"
                android:layout_marginEnd="@dimen/dp40"
                android:layout_marginTop="@dimen/dp30">

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_login_button"
                    android:text="@string/str_share"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_grey_button"
                    android:text="@string/str_cancel"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/white" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp10"
                android:paddingStart="@dimen/dp40"
                android:paddingEnd="@dimen/dp20"
                android:textSize="@dimen/sp12"
                android:textColor="@color/color_top" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_share"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="@dimen/dp20"
            app:fabCustomSize="@dimen/dp50"
            app:elevation="@dimen/dp5"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/btn_add"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</layout>